--- a/RoboGX/pom.xml
+++ b/RoboGX/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.roboxtensions</groupId>
     <artifactId>robogx</artifactId>
-    <version>1.0</version>
+    <version>0.1-SNAPSHOT</version>
     <name>RoboGX</name>
 
 
@@ -22,9 +22,8 @@
             <artifactId>roboguice</artifactId>
         </dependency>
         <dependency>
-            <groupId>android</groupId>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
