--- a/RoboLX/pom.xml
+++ b/RoboLX/pom.xml
@@ -13,18 +13,18 @@
 
     <groupId>com.roboxtensions</groupId>
     <artifactId>robolx</artifactId>
-    <version>1.0</version>
+    <version>0.1-SNAPSHOT</version>
     <name>RoboLX</name>
 
     <dependencies>
         <dependency>
             <groupId>org.roboguice</groupId>
             <artifactId>roboguice</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>android</groupId>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
