--- a/RoboGX/pom.xml
+++ b/RoboGX/pom.xml
@@ -22,7 +22,7 @@
             <artifactId>roboguice</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.android</groupId>
+            <groupId>android</groupId>
             <artifactId>android</artifactId>
         </dependency>
         <dependency>
